# galago

./: CHANGELOG.md  Cargo.toml  README.md  index.html
.github/workflows/: release.yml  rust.yml
assets/: gen_assets.sh  manifest.json  sw.js
src/: app.rs  central_panel.rs  document.rs  errors.rs  file_handler.rs  grid.rs  lib.rs  main.rs  path.rs  settings.rs  string_viewer.rs  svg_render.rs  top_panel.rs  transformation.rs  tree_viewer.rs
