[package]
name = "galago"
version = "1.1.4"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml", "assets/*"]
rust-version = "1.88"
description = "Galago svg editor"
license = "MIT"
keywords = ["galago", "graphics", "gui", "image", "svg"]
categories = ["gui", "graphics"]
homepage = "https://galago.n4n5.dev"
repository = "https://github.com/Its-Just-Nans/galago"
documentation = "https://docs.rs/galago"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
bladvak = "1.0.9"
# bladvak = { path = "../bladvak" }

serde = { version = "1", features = ["derive"] }
resvg = "0.45.1"
svg = "0.18.0"
svgtypes = "0.16.0"
xmltree = { version = "0.12.0", features = ["attribute-order"] }
image = "0.25.9"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.83", features = [
    "Url",
] } # to access the DOM (to hide the loading text)
js-sys = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
